for some weird reason that annoying piece of code was changed back to java1.5 signature, fixed